# upolicy

./: .gitignore  Makefile.am  README.org  configure.ac  index.html  params.json
doc/: Makefile.am  index.html  kernel.html
doc/api/: annotated.html  classes.html  context_8h.html  context_8h_source.html  core_8h.html  core_8h_source.html  dir_407cb111d520c6d9fab829c670dca9ff.html  dir_b3884d8f48548a1cdb699b14ad5c3241.html  dir_d1f03d92f0ab8ef7af6ee9f7592bd550.html  dir_e4c7ed416beb69865ccf3397a9fbfe09.html  dirs.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  group__Context.html  group__Core.html  group__Misc.html  group__Netlink.html  group__Types.html  index.html  internal_8h.html  internal_8h_source.html  list_8h.html  list_8h_source.html  modules.html  netlink_8h.html  netlink_8h_source.html  structlist.html  structlist__entry.html  structupolicy__context.html  structupolicy__event__info.html  structupolicy__ops.html  types_8h.html  types_8h_source.html  (+2 more)
doc/api/search/: all_5f.js  all_61.js  all_63.js  all_65.js  all_68.js  all_69.js  all_6b.js  all_6c.js  all_6e.js  all_6f.js  all_73.js  all_74.js  all_75.js  classes_75.js  defines_5f.js  defines_6c.js  defines_6e.js  defines_75.js  enums_75.js  enumvalues_5f.js  enumvalues_75.js  files_63.js  files_6e.js  functions_5f.js  functions_6c.js  functions_75.js  search.js  typedefs_75.js  variables_63.js  variables_70.js  variables_71.js  variables_75.js
doc/apidoc/: Doxyfile.in  Makefile.am
doc/kerneldoc/: Makefile.am
examples/: Makefile.am
examples/c/: Makefile.am  example_exec.c  example_init.c  example_localhost_only.c  example_nokill.c  example_nosocket.c  example_socket_nolisten.c
kernel/: Kbuild  Makefile.in  context.c  handler_bprm.c  handler_cred.c  handler_fs.c  handler_ptrace.c  handler_socket.c  handler_task.c  lib.c  lsm.c  netlink.c  tracee.c  tracer.c
kernel/include/: Makefile.am
kernel/include/kupolicy/: context.h  handler.h  netlink.h  netlink_version.h.in  tracee.h  tracer.h  types.h  upolicy.h
lib/: Makefile.am
lib/c/: Makefile.am
lib/c/include/: Makefile.am
lib/c/include/upolicy/: context.h  core.h  internal.h  list.h  netlink.h  types.h  version.h.in
lib/c/src/: Makefile.am  context.c  core.c  lib.c  netlink.c
lib/python/: Makefile.am  __init__.py  pyupolicy.c
m4/: upolicy_local.m4
